ISSUE-4: add python and js

--- a/html/index.html
+++ b/html/index.html
@@ -16,9 +16,10 @@
 			<div class="row" style="min-height: 300px;">
 				<div class="col-md-8">
 					<h2>Get it:</h2>
-					<a href="ruby.html">Ruby</a>
-					<br>
-					<a href="java.html">Java</a>
+					<a href="ruby.html">Ruby</a><br>
+					<a href="java.html">Java</a><br>
+					<a href="python.html">Python</a><br>
+					<a href="javascript.html">Javascript</a><br>
 				</div>
 			</div>
 			<footer class="my-5 pt-5 text-muted text-center text-small">
