--- a/html/index.html
+++ b/html/index.html
@@ -10,25 +10,21 @@
 	<body class="bg-light">
 		<div class="container-fluid">
 			<div class="py-5 text-center">
-				<img class="d-block mx-auto mb-4" src="https://getbootstrap.com/assets/brand/bootstrap-solid.svg" alt="" width="72" height="72">
 				<h2>Skeleton</h2>
 			</div>
 			<div class="row" style="min-height: 300px;">
 				<div class="col-md-8">
 					<h2>Get it:</h2>
-					<a href="ruby.html">Ruby</a><br>
-					<a href="java.html">Java</a><br>
-					<a href="python.html">Python</a><br>
-					<a href="javascript.html">Javascript</a><br>
+					<li><a href="ruby.html">Ruby</a></li>
+					<li><a href="java.html">Java</a></li>
+					<li><a href="python.html">Python</a></li>
+					<li><a href="javascript.html">Javascript</a></li>
 				</div>
 			</div>
 			<footer class="my-5 pt-5 text-muted text-center text-small">
-				<p class="mb-1">© 2018-2033 forqa</p>
-				<ul class="list-inline">
-					<li class="list-inline-item"><a href="#">Privacy</a></li>
-					<li class="list-inline-item"><a href="#">Terms</a></li>
-					<li class="list-inline-item"><a href="#">Support</a></li>
-				</ul>
+				<p class="mb-1">© 2018 <a href="https://github.com/forqa">forqa</a></p>
+				<p class="mb-1"><a href="https://github.com/alter-al">alter-al</a></p>
+				<ul class="list-inline"></ul>
 			</footer>
 		</div>
 	</body>
