--- a/html/index.html
+++ b/html/index.html
@@ -7,12 +7,12 @@
 		<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/css/bootstrap.min.css" integrity="sha384-9gVQ4dYFwwWSjIDZnLEWnxCjeSWFphJiwGPXr1jddIhOegiu1FwO5qRGvFXOdJZ4" crossorigin="anonymous">
 		<link rel="stylesheet" type="text/css" href="/index.css"/>
 	</head>
-	<body class="bg-light" style="background: linear-gradient(white, lightblue);">
+	<body class="bg-light">
 		<div class="container-fluid">
 			<div class="py-5 text-center">
 				<h2>Skeleton</h2>
 			</div>
-			<div class="row" style="min-height: 300px;">
+			<div class="row" style="min-height: 333px;">
 				<div class="col-md-8">
 					<h2>Get it:</h2>
 					<li><a href="ruby.html">Ruby</a></li>
