ISSUE-1: Add Swift Page Objects implementation for iOS platform

--- a/server/skeleton.html
+++ b/server/skeleton.html
@@ -19,6 +19,7 @@
 					<li><a href="java">Java</a></li>
 					<li><a href="python">Python</a></li>
 					<li><a href="javascript">Javascript</a></li>
+					<li><a href="swift">Swift</a> (iOS required)</li>
 				</div>
 			</div>
 			<footer class="my-5 pt-5 text-muted text-center text-small">
